--- a/README.org
+++ b/README.org
@@ -5,5 +5,5 @@ cl-cffi-glib is a Lisp binding to the GLib, GObject, and GIO libraries.
 |---------+--------------------------------------------------|
 | source  | git:https://github.com/crategus/cl-cffi-glib.git |
 | commit  | efe9f15                                          |
-| systems | cl-cffi-glib                                     |
+| systems | cl-cffi-glib cl-cffi-glib-init                   |
 |---------+--------------------------------------------------|
